--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
-.App {
+/*Estilo do body*/
+
+body{
+  margin: 0px;
+  padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: lightgrey;
+}
+
+/*Estilo do header*/
+
+Header{
+  background-color: black;
+  color: white;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 20px 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  /*Fixando o menu no topo
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; /*para ficar sobre a caixa toda*/
+  
+}
+
+/*
+Heade h1{
+  
+}
+*/
+
+nav ul{
+  list-style-type: none;
+  padding: 15px;
+}
+
+nav li{
+  display: inline;
+  margin-right: 20px;
+}
+
+nav li :hover{
+  color: blue;
+  text-decoration: underline;
+}
+
+nav a{
+  text-decoration: none;
+  font-weight: bold;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/*Estilo do Main*/
+
+/*Estilo da section sobre*/
+.sobre{
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-right: 50px;
+  /*padding: 200px;*/
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.foto-sobre{
+  width: 400px;
+}
+
+/*Estilo da section tecnologia*/
+.tecnologias{
+  text-align: center;
+  padding: 50px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 20px 0px;
+  transition: background-color 1.5s;
+}
+
+.tecnologias:hover{
+  background-color: white;
+  transform: scale(1.05);
+}
+
+.tecnologia h2{
+  padding: 50px;
+  text-align: center;
+}
+
+.foto-html{
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.foto-css{
+  width: 250px;
+  height: 250px;
+}
+
+.foto-js{
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.foto-react{
+  width: 200px;
+  height: 160px;
+  border-radius: 50%;
+}
+
+/*Estilo da section projetos*/
+
+.formatacaoProjeto{
+  width: 300px;
+  height: 300px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  transition: background-color 1.5s;
+}
+
+.formatacaoProjeto:hover{
+  background-color: white;
+  transform: scale(1.05);
+}
+
+#boxProjeto{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.projetos h2{
+  text-align: center;
+  padding: 50px;
+}
+
+.projetos h3{
+  text-align: center;
+  padding: 10px;
+}
+
+.projetos a{
+  text-decoration: none;
+  color: black;
+}
+
+.projetos a:hover{
+  color: blue;
+  text-decoration: underline;
+}
+
+.projetos p{
+  text-align: center;
+  padding: 50px;
+}
+
+/*Estido da section contato*/
+
+.contato{
+  text-align: center;
+}
+
+.form-contato{
+  display: flex;
+}
+
+
+/*Estilo do Footer*/
+footer{
+  background-color: black;
+  text-align: center;
+  padding: 10px 0;
+}
+
+footer p{
+  color: white;
 }
