--- a/src/App.css
+++ b/src/App.css
@@ -159,17 +159,61 @@ nav a{
 }
 
 /*Estido da section contato*/
-
+.contato h2{
+  padding: 10px;
+}
 .contato{
+  padding: 10px;
   text-align: center;
 }
 
-.form-contato{
-  display: flex;
+.contato form{
+  max-width: 500px;
+  margin: 0 auto;
 }
 
+.contato form input{
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.596);
+  border-radius: 5px;
+  transition: border-color 0.3s;
+}
+
+.contato form input[type='text']::placeholder{
+  font-style: italic;
+  text-align: center;
+}
+
+.contato form input[type='email']::placeholder{
+  font-style: italic;
+  text-align: center;
+}
+
+.contato form input[type='telefone']::placeholder{
+  font-style: italic;
+  text-align: center;
+}
+
+.contato form button {
+  background-color: black;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 15px;
+  transition: background-color 0.3s ease;
+}
+
+.contato form button:hover{
+  background-color: rgba(5, 5, 5, 0.636);
+}
 
 /*Estilo do Footer*/
+
+
 footer{
   background-color: black;
   text-align: center;
